--- a/src/testRunner/tsconfig.json
+++ b/src/testRunner/tsconfig.json
@@ -118,6 +118,7 @@
         "unittests/services/transpile.ts",
         "unittests/tsbuild/amdModulesWithOut.ts",
         "unittests/tsbuild/clean.ts",
+        "unittests/tsbuild/commandLine.ts",
         "unittests/tsbuild/configFileErrors.ts",
         "unittests/tsbuild/configFileExtends.ts",
         "unittests/tsbuild/containerOnlyReferenced.ts",
